add upgrade task

--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -1,9 +1,9 @@
 {
   "license": "Apache-2.0",
   "scripts": {
-    "test": "npx hardhat test",
-    "coverage": "npx hardhat coverage",
-    "lint": "npx solhint 'contracts/**/*.sol'"
+    "test": "hardhat test",
+    "coverage": "hardhat coverage",
+    "lint": "solhint 'contracts/**/*.sol'"
   },
   "dependencies": {
     "@iarna/toml": "^2.2.5",
